--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
+    "@types/react-js-pagination": "^3.0.7",
     "antd": "^5.11.0",
     "axios": "^1.6.0",
     "react": "^18.2.0",
