--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.34",
+    "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.14",
     "@types/react-draft-wysiwyg": "^1.13.7",
     "@types/react-js-pagination": "^3.0.7",
